fixed layout issue. using astro collection is the way to go. added an explanation in a md file

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -18,6 +18,18 @@
   
   .container { max-width: 700px; padding: 3rem 1.5rem; margin: 0 auto; }
   
+  .prose {
+    max-width: 100%;
+  }
+  
+  .prose > *:first-child {
+    margin-top: 0;
+  }
+  
+  .prose > *:last-child {
+    margin-bottom: 0;
+  }
+  
   h1,h2,h3,h4 {
     font-family: var(--font-ui);
     font-weight: 600;
